--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reminder-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Keep track of your friends' stupid predictions",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,6 +16,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "moment": "^2.30.0"
+    "moment": "^2.30.0",
+    "mongoose": "^8.0.3"
   }
 }
