--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "moment": "^2.30.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "node-cron": "^3.0.3"
   }
 }
